revamp: redesign the main page

--- a/proxy/client/index.html
+++ b/proxy/client/index.html
@@ -3,7 +3,7 @@
 <head>
   <html>
   <meta charset="utf-8">
-  <title>Yelp Clone Proxy</title>
+  <title>Glithy</title>
   <link rel="stylesheet" href="style.css">
   <!-- Material Icons Starter -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,10 +12,18 @@
 </head>
 
 <body>
-  <div id="app">Work</div>
-  <div id="Homepage">Work</div>
-  <div id="reviews">Work</div>
-  <div id="similar-places">Work</div>
+  <div class="app">
+    <div id="app">Work</div>
+  </div>
+  <div class="Homepage">
+    <div id="Homepage">Work</div>
+  </div>
+  <div class="reviews">
+    <div id="reviews">Work</div>
+  </div>
+  <div class="similar-places">
+    <div id="similar-places">Work</div>
+  </div>
 
   <script src="http://18.216.243.227:80/bundle.js"></script>
   <script src="http://13.52.246.213:80/bundle.js"></script>
