Added: logo feature

--- a/proxy/client/index.html
+++ b/proxy/client/index.html
@@ -3,12 +3,15 @@
 <head>
   <html>
   <meta charset="utf-8">
-  <title>Glithy</title>
+  <title>Ozumo - Updated COVID-19 Hours &amp; Services - 1977 Photos &amp; 2293 Reviews - Sushi Bars - 161 Steuart St,
+    Financial District, San Francisco, CA - Restaurant Reviews - Phone Number - Menu - Yelp</title>
   <link rel="stylesheet" href="style.css">
   <!-- Material Icons Starter -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Roboto:wght@100&display=swap"
     rel="stylesheet">
+  <link rel="icon" href="https://hackreactor-restaurant-images.s3-us-west-2.amazonaws.com/static-images/yelp.png"
+    type="image/png" sizes="16x16">
 </head>
 
 <body>
